--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,13 +11,21 @@ android {
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
 
+    testOptions {
+        unitTests.returnDefaultValues = true
+    }
+
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
 
     buildTypes {
+        debug{
+            buildConfigField("String", "API_KEY", "\"1f54bd990f1cdfb230adb312546d765d\"")
+        }
         release {
+            buildConfigField("String", "API_KEY", "\"1f54bd990f1cdfb230adb312546d765d\"")
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
@@ -37,6 +45,7 @@ dependencies {
     implementation "io.reactivex.rxjava2:rxandroid:2.0.2"
     implementation 'com.github.bumptech.glide:glide:4.6.1'
 
+    testImplementation "org.mockito:mockito-core:2.9.0"
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
